--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
 
-    <meta name="google-site-verification" content="eRvCxZJDd_9f8A-wmiG8nFTcSQeKPdZUp9UFbroxK0o" />
+    <meta name="google-site-verification" content="eRvCxZJDd_9f8A-wmiG8nFTcSQeKPdZUp9UFbroxK0o">
 
     <title> PewDiePie vs T-Series </title>
     <meta name="description" content="The EPIC between between PewDiePie and T-Series realtime numbers">
